refactorisation build path and isolate each controller

--- a/cmd/violin/templates/duets.html
+++ b/cmd/violin/templates/duets.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="optionselect">
-  <form action="/duetshow" method="post">
+  <form action="/duet" method="post">
 
       <div class="duetselect">
        {{range .DuetOptions}}
