--- a/cmd/violin/templates/scale.html
+++ b/cmd/violin/templates/scale.html
@@ -24,7 +24,7 @@
 </div>
 
 <div class="optionselect">
-  <form action="/scaleshow" method="post">
+  <form action="/scale" method="post">
 
       <div class="scalearpselect">
        {{range .ScaleOptions}}
